Fix: add scrollbar to handle overflow

--- a/frontend/src/components/ChatForm/index.module.css
+++ b/frontend/src/components/ChatForm/index.module.css
@@ -1,5 +1,24 @@
 .chatFormDialog {
-  @apply bg-secondary;
+  @apply bg-secondary overflow-y-scroll overflow-x-scroll;
+
+  &::-webkit-scrollbar {
+    @apply w-1;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    @apply bg-transparent;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    @apply bg-accent-1 bg-opacity-30 rounded-full;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    @apply bg-accent-1 bg-opacity-30;
+  }
 }
 
 .closeBtn {
